# sql-antipattern-scanner

./: .gitignore  MANIFEST.in  README.md  antipatterns.py  cli.py  config.json  pyproject.toml  query.sql  report.html  report_generator.py  report_styles.css  setup.cfg  setup.py  sql_antipattern_scanner.py  test_sql_antipattern_scanner.py
admin/: README.md
sql_antipattern_scanner/: __init__.py  antipatterns.py  cli.py  report_generator.py  sql_antipattern_scanner.py
sql_antipattern_scanner/static/: report_styles.css
sql_antipattern_scanner/tests/: test_sql_antipattern_scanner.py
