[metadata]
name = sql_antipattern_scanner
version = 0.1.0
author = Nicholas G. Piesco
author_email = nicholas.piesco@gmail.com
description = Tool to scan SQL for antipatterns and generate reports with remediation steps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/npiesco/sql-antipattern-scanner
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    sqlparse
    pyyaml
    jinja2

[options.packages.find]
where = .
include = sql_antipattern_scanner*

[options.entry_points]
console_scripts =
    sql-antipattern-scanner = sql_antipattern_scanner.cli:main

[options.package_data]
sql_antipattern_scanner = 
    config/*.json
    static/*.css