[metadata]
name = sql_antipattern_scanner
author = Nicholas G. Piesco
author_email = nicholas.piesco@gmail.com
description = Tool to scan SQL for antipatterns and generate reports with remediation steps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/npiesco/sql-antipattern-scanner

[options]
packages = find:
include_package_data = True

[options.package_data]
sql_antipattern_scanner = 
    config/*.json
    static/*.css